Revert back to last version,fixed layout buggy

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .bg-container {
   background-image: url('./assets/background.png');
   background-size: cover;
-  color: #3a2d37
+  color: #3a2d37;
+  margin: 100px;
 }
